Fix filter buttons spacing

--- a/styles.css
+++ b/styles.css
@@ -259,10 +259,18 @@ label {
 }
 
 /*Media Queries*/
-@media(max-width: 320px) {
+@media(max-width: 430px) {
+  h2 {
+    display: none;
+  }
+
   .button-div {
-    justify-content: left;
     width: 10px;
+  }
+
+  .filter, .show-all-cards,
+  .show-complete-button{
+    margin: 5px;
   }
 }
 @media(max-width: 745px){
@@ -274,7 +282,7 @@ label {
 
 @media(max-width: 820px) {
   .button-div {
-    width: 739px;
+    width: 100%;
   }
 }
 
